syntax = "proto3";

package plots;

service Plot {
  rpc SVG_Chart(ChartRequest) returns (DataResponse);
  rpc HTML_Chart(ChartRequest) returns (DataResponse);
}


message ChartXAxis {
  repeated string x = 5 ;
}


message YAxisData {
   double open = 6 ;
   double close = 7 ;
   double low = 8 ;
   double high = 9 ;
}


message ChartRequest {
  ChartXAxis x = 1 ;
  repeated YAxisData y = 2 ;
  string user_id = 3 ;
  string group_id = 4 ;
}

message DataResponse {
  string  path = 1;
  string  file = 2;
}

service Admin {
  rpc GetRequestCount(GetCountRequest) returns (CounterResponse);
}

message GetCountRequest {}

message CounterResponse { uint64 count = 1; }